@@ -146,6 +146,10 @@ Mojolicious::Plugin::Ident
 
 =item *
 
+Mojolicious::Plugin::RenderFile
+
+=item *
+
 Mojolicious::Plugin::SslAuth
 
 =item *
